force-app/main/default/objects/QuoteLineItem/fields/Effective_Final_Discount_Approver__c.field-meta.xml
<CustomField>
    <fullName>Effective_Final_Discount_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approval-cycle snapshot of the quote-wide highest approver for this discount request.</description>
    <label>Effective Final Discount Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Lines_Effective_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>