force-app/main/default/objects/QuoteLineItem/fields/Is_QLI_Approved_going_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Is_QLI_Approved_going_for_Approval__c</fullName>
    <formula>Is_QLI_Gone_For_Approval__c  &amp;&amp;  Is_Discount_Only_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is QLI Approved going for Approval</label>
    <type>Checkbox</type>
</CustomField>